--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
   <div id="feedback">¡Respuesta incorrecta! Pierdes una vida ❤️</div>
   <div class="container">
-    <img src="https://static.wixstatic.com/media/ed6298_a9feb3bc2f894f2fb14e07593db423e~mv2.png/v1/fill/w_438,h_139,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/logo.png" alt="Pilates Élite" class="logo" />
+    <img src="https://static.wixstatic.com/media/ed6298_a9feb3bc2f894f2fb14e07593db423e6~mv2.png/v1/fill/w_438,h_139,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/logo.png>
 
     <div id="start-screen">
       <h1>Quiz de Pilates</h1>
@@ -194,6 +194,13 @@
         {
           question: "¿Quién creó el método Pilates?",
           options: ["Basi Pilates", "Joseph Pilates", "Romana Kryzanowska"],
+          answer: 1
+        }
+      ],
+
+        {
+          question: "¿Dónde encuentro las normas de Pilates Élite?",
+          options: ["Publicadas en el periódico", "En la app donde pone Normas del Centro ", "En el B.O.E"],
           answer: 1
         }
       ],
